tdf#128787 sd: Make StyleNewByExample and StyleUpdateByExample work

when no arguments are supplied

Change-Id: I245aa0f6b212e049dce6bdf9e079495119aeadbb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163208
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>